# templates

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  TODO
src/: CMakeLists.txt
